// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > should match the snapshot > default 1`] = `
<body>
  <div>
    <div
      class="flex items-center rounded-md border px-2 py-1 text-sm transition-colors border-transparent bg-green-dark-500 text-neutral-100"
    >
      badge
    </div>
  </div>
</body>
`;

exports[`Badge > should match the snapshot > destructive 1`] = `
<body>
  <div>
    <div
      class="flex items-center rounded-md border px-2 py-1 text-sm transition-colors border-transparent bg-red-600 text-neutral-100"
    >
      badge
    </div>
  </div>
</body>
`;

exports[`Badge > should match the snapshot > outline 1`] = `
<body>
  <div>
    <div
      class="flex items-center rounded-md border px-2 py-1 text-sm transition-colors border-transparent bg-neutral-200 text-neutral-800"
    >
      badge
    </div>
  </div>
</body>
`;

exports[`Badge > should match the snapshot > secondary 1`] = `
<body>
  <div>
    <div
      class="flex items-center rounded-md border px-2 py-1 text-sm transition-colors border-transparent bg-neutral-200 text-neutral-800"
    >
      badge
    </div>
  </div>
</body>
`;
